<resources>
    <string name="app_name">Amazing wallpaper</string>
    <string name="search">Поиск</string>

    <string name="api_key">8304bf2e6183717d7caa61fe4ba68da2</string>
    <string name="setup_screen">Установить на рабочий стол</string>
    <string name="setup_lock_screen">Установить на экран блокировки</string>
    <string name="download">Скачать</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Abstract">Abstract</string>
    <string name="Animal">Animal</string>
    <string name="Anime">Anime</string>
    <string name="Artistic">Artistic</string>
    <string name="Celebrity">Celebrity</string>
    <string name="Comics">Comics</string>
    <string name="Dark">Dark</string>
    <string name="Earth">Earth</string>
    <string name="Fantasy">Fantasy</string>
    <string name="Food">Food</string>
    <string name="Game">Game</string>
    <string name="Holiday">Holiday</string>
    <string name="Humor">Humor</string>
    <string name="Man_Made">Man Made</string>
    <string name="Men">Men</string>
    <string name="Military">Military</string>
    <string name="Misc">Misc</string>
    <string name="Movie">Movie</string>
    <string name="Music">Music</string>
    <string name="Photography">Photography</string>
    <string name="Products">Products</string>
    <string name="Religious">Religious</string>
    <string name="Sci_Fi">Sci Fi</string>
    <string name="Sports">Sports</string>
    <string name="Technology">Technology</string>
    <string name="TV_Show">TV Show</string>
    <string name="Vehicles">Vehicles</string>
    <string name="Video_Game">Video Game</string>
    <string name="Weapons">Weapons</string>
    <string name="Women">Women</string>

</resources>