<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.setup.SetupFragment">


    <ImageView
        android:id="@+id/image_view_setup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader" />

    <ImageView
        android:id="@+id/image_view_toback"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/back_background"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/search_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_setup_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/setup_screen"
            android:textColor="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/text_view_setup_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/setup_lock_screen"
            android:textColor="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/text_view_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/download"
            android:textColor="#fff" />

    </LinearLayout>
</FrameLayout>